tests/dynamic_export/dynamic_export.exp
Error ---------------------------------------------------------------------------------------------------- basic.js:4:24

Dynamic explicit 'any' [1] unsafely appears in exported `x` [2]. This can cause importing modules to lose type coverage!
(`dynamic-export`)

   basic.js:4:24
   4| module.exports = {any: x, function: y};
                             ^

References:
   basic.js:2:9
   2| let x : any = 3; // error
              ^^^ [1]
   basic.js:2:5
   2| let x : any = 3; // error
          ^ [2]


Error ---------------------------------------------------------------------------------------------------- basic.js:4:37

Dynamic function type [1] unsafely appears in exported `y` [2]. This can cause importing modules to lose type coverage!
(`dynamic-export`)

   basic.js:4:37
   4| module.exports = {any: x, function: y};
                                          ^

References:
   basic.js:3:9
   3| let y : Function = () => {}; // error
              ^^^^^^^^ [1]
   basic.js:3:5
   3| let y : Function = () => {}; // error
          ^ [2]


Error ---------------------------------------------------------------------------------------------------- cycle1.js:4:1

Dynamic explicit 'any' [1] unsafely appears in exported .f [2]. This can cause importing modules to lose type coverage!
(`dynamic-export`)

   cycle1.js:4:1
   4| module.exports.f = c.f;
      ^^^^^^^^^^^^^^^^ [2]

References:
   cycle2.js:4:25
   4| module.exports.f = (3 : any);
                              ^^^ [1]


Error ---------------------------------------------------------------------------------------------------- cycle1.js:5:1

Dynamic explicit 'any' [1] unsafely appears in exported .g [2]. This can cause importing modules to lose type coverage!
(`dynamic-export`)

   cycle1.js:5:1
   5| module.exports.g = (3 : any)
      ^^^^^^^^^^^^^^^^ [2]

References:
   cycle1.js:5:25
   5| module.exports.g = (3 : any)
                              ^^^ [1]


Error ---------------------------------------------------------------------------------------------------- cycle2.js:4:1

Dynamic explicit 'any' [1] unsafely appears in exported .f [2]. This can cause importing modules to lose type coverage!
(`dynamic-export`)

   cycle2.js:4:1
   4| module.exports.f = (3 : any);
      ^^^^^^^^^^^^^^^^ [2]

References:
   cycle2.js:4:25
   4| module.exports.f = (3 : any);
                              ^^^ [1]


Error ---------------------------------------------------------------------------------------------------- cycle2.js:5:1

Dynamic explicit 'any' [1] unsafely appears in exported .g [2]. This can cause importing modules to lose type coverage!
(`dynamic-export`)

   cycle2.js:5:1
   5| module.exports.g = c.g;
      ^^^^^^^^^^^^^^^^ [2]

References:
   cycle1.js:5:25
   5| module.exports.g = (3 : any)
                              ^^^ [1]


Error ---------------------------------------------------------------------------------------------------- error.js:3:21

Cannot resolve module `./does_not_exist.js`.

   3| const err = require('./does_not_exist.js')
                          ^^^^^^^^^^^^^^^^^^^^^


Error ---------------------------------------------------------------------------------------------------- error.js:5:18

Dynamic implicit 'any' [1] unsafely appears in exported `err` [2]. This can cause importing modules to lose type
coverage! (`dynamic-export`)

   error.js:5:18
   5| module.exports = err;
                       ^^^ [2]

References:
   error.js:3:13
   3| const err = require('./does_not_exist.js')
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]


Error ------------------------------------------------------------------------------------------------- esmodule.js:3:17

Dynamic explicit 'any' [1] unsafely appears in exported function [2]. This can cause importing modules to lose type
coverage! (`dynamic-export`)

   esmodule.js:3:17
   3| export function foo (x : any) {}
                      ^^^

References:
   esmodule.js:3:26
   3| export function foo (x : any) {}
                               ^^^ [1]
   esmodule.js:3:8
   3| export function foo (x : any) {}
             ^^^^^^^^^^^^^^^^^^^^^^ [2]


Error -------------------------------------------------------------------------------------------------- esmodule.js:5:9

Dynamic explicit 'any' [1] unsafely appears in exported `x` [2]. This can cause importing modules to lose type coverage!
(`dynamic-export`)

   esmodule.js:5:9
   5| export {x as field}
              ^^^^^^^^^^

References:
   esmodule.js:4:9
   4| let x : any = 3;
              ^^^ [1]
   esmodule.js:4:5
   4| let x : any = 3;
          ^ [2]


Error ----------------------------------------------------------------------------------------------- not_object.js:3:18

Dynamic explicit 'any' [1] unsafely appears in exported `x` [2]. This can cause importing modules to lose type coverage!
(`dynamic-export`)

   not_object.js:3:18
   3| module.exports = x;
                       ^

References:
   not_object.js:2:9
   2| let x : any = 3; // error
              ^^^ [1]
   not_object.js:2:5
   2| let x : any = 3; // error
          ^ [2]


Error ------------------------------------------------------------------------------------------------ transitive.js:9:1

Dynamic explicit 'any' [1] unsafely appears in exported .explicit_any [2]. This can cause importing modules to lose type
coverage! (`dynamic-export`)

   transitive.js:9:1
   9| module.exports.explicit_any = e.any; // error
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^ [2]

References:
   basic.js:2:9
   2| let x : any = 3; // error
              ^^^ [1]


Error ----------------------------------------------------------------------------------------------- transitive.js:10:1

Dynamic function type [1] unsafely appears in exported .explicit_function [2]. This can cause importing modules to lose
type coverage! (`dynamic-export`)

   transitive.js:10:1
   10| module.exports.explicit_function = e.function; // error
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [2]

References:
   basic.js:3:9
    3| let y : Function = () => {}; // error
               ^^^^^^^^ [1]


Error ----------------------------------------------------------------------------------------------- transitive.js:12:1

Dynamic implicit 'any' [1] unsafely appears in exported .untyped [2]. This can cause importing modules to lose type
coverage! (`dynamic-export`)

   transitive.js:12:1
   12| module.exports.untyped = u; // error
       ^^^^^^^^^^^^^^^^^^^^^^ [2]

References:
   transitive.js:4:11
    4| const u = require('untyped');
                 ^^^^^^^^^^^^^^^^^^ [1]


Error ----------------------------------------------------------------------------------------------- transitive.js:13:1

Dynamic explicit 'any' [1] unsafely appears in exported .lib [2]. This can cause importing modules to lose type
coverage! (`dynamic-export`)

   transitive.js:13:1
   13| module.exports.lib = L.v; // error
       ^^^^^^^^^^^^^^^^^^ [2]

References:
   lib/libdef.js:3:19
    3|   declare var v : any;
                         ^^^ [1]


Error ----------------------------------------------------------------------------------------------- transitive.js:14:1

Dynamic `Type` [1] unsafely appears in exported .field [2]. This can cause importing modules to lose type coverage!
(`dynamic-export`)

   transitive.js:14:1
   14| module.exports.field = f; // error
       ^^^^^^^^^^^^^^^^^^^^ [2]

References:
   type.js.flow:4:30
    4| declare module.exports: {f : Type};
                                    ^^^^ [1]


Error ----------------------------------------------------------------------------------------------- transitive.js:16:1

Dynamic `Type` [1] unsafely appears in exported .x [2]. This can cause importing modules to lose type coverage!
(`dynamic-export`)

   transitive.js:16:1
   16| module.exports.x = x;
       ^^^^^^^^^^^^^^^^ [2]

References:
   type.js.flow:2:20
    2| export type Type = any;
                          ^^^ [1]


Error ------------------------------------------------------------------------------------------------- type.js.flow:2:1

Dynamic `Type` [1] unsafely appears in exported `Type` [2]. This can cause importing modules to lose type coverage!
(`dynamic-export`)

   type.js.flow:2:1
   2| export type Type = any;
      ^^^^^^^^^^^^^^^^^^^^^^^

References:
   type.js.flow:2:20
   2| export type Type = any;
                         ^^^ [1]
   type.js.flow:2:13
   2| export type Type = any;
                  ^^^^ [2]


Error ------------------------------------------------------------------------------------------------ type.js.flow:4:30

Dynamic `Type` [1] unsafely appears in exported `Type` [2]. This can cause importing modules to lose type coverage!
(`dynamic-export`)

   type.js.flow:4:30
   4| declare module.exports: {f : Type};
                                   ^^^^ [2]

References:
   type.js.flow:2:20
   2| export type Type = any;
                         ^^^ [1]



Found 19 errors
